--- a/action.yml
+++ b/action.yml
@@ -71,7 +71,8 @@ runs:
         echo "Checking Commits..."
 
         COMMIT_COUNT=$((MIN_COMMITS + 1))
-        git fetch --all --no-tags --depth=${COMMIT_COUNT} --quiet
+        git fetch --all --no-tags # --depth=${COMMIT_COUNT} --quiet
+        git rev-list --all
         NUM_COMMITS=$(git rev-list --all --count)
         echo "::set-env name=NUM_COMMITS::${NUM_COMMITS}"
         echo "Looked for ${COMMIT_COUNT} commits; found ${NUM_COMMITS}; ${MIN_COMMITS} required."
