--- a/action.yml
+++ b/action.yml
@@ -68,19 +68,12 @@ runs:
       shell: bash
       run: |
         echo ""
-        echo "Git Configuration..."
-        git config --list
-        
-        echo ""
         echo "Checking Commits..."
 
-        COMMIT_COUNT=$((MIN_COMMITS + 1))
-        git fetch --all --no-tags # --depth=${COMMIT_COUNT} --quiet
-        git rev-list --all
-        
+        git fetch --unshallow
         NUM_COMMITS=$(git rev-list --all --count)
-        echo "::set-env name=NUM_COMMITS::${NUM_COMMITS}"
         
+        echo "::set-env name=NUM_COMMITS::${NUM_COMMITS}"        
         echo "Looked for ${COMMIT_COUNT} commits; found ${NUM_COMMITS}; ${MIN_COMMITS} required."
 
     # have to substitute all environment varaibles into the command files
