--- a/action.yml
+++ b/action.yml
@@ -57,7 +57,7 @@ runs:
         echo "Template Tests:"
         ls -CGR ${TEMPLATE_DIR}/template/${HOMEWORK_NAME}/src/test/
 
-        mv -fv ${TEMPLATE_DIR}/template/${HOMEWORK_NAME}/src/test ${HOMEWORK_NAME}/src/test
+        mv -fv ${TEMPLATE_DIR}/template/${HOMEWORK_NAME}/src/test ${HOMEWORK_NAME}/src/
         mv -fv ${TEMPLATE_DIR}/template/${HOMEWORK_NAME}/pom.xml ${HOMEWORK_NAME}/
         
     # do this before so the NUM_COMMITS is properly substituted
