--- a/action.yml
+++ b/action.yml
@@ -57,6 +57,7 @@ runs:
         echo "Template Tests:"
         ls -CGR ${TEMPLATE_DIR}/template/${HOMEWORK_NAME}/src/test/
 
+        rm -rf ${HOMEWORK_NAME}/src/test
         mv -fv ${TEMPLATE_DIR}/template/${HOMEWORK_NAME}/src/test ${HOMEWORK_NAME}/src/
         mv -fv ${TEMPLATE_DIR}/template/${HOMEWORK_NAME}/pom.xml ${HOMEWORK_NAME}/
         
